--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ html{
     font-family: 'Roboto',sans-serif;
     color:#eee;
 }
+@font-face{
+    font-family: The Historia Demo;
+    src:url('TheHistoriaDemo')
+}
 body{
     width: 100%;
     height: 100%;
